<resources>
    <string name="app_name">My Application new</string>
    <string name="first_text">First Text</string>
    <string name="claim">Claim</string>
    <string name="muvee_poster">Muvee Poster</string>
    <string name="name">Name</string>
    <string name="m">M</string>
    <string name="uvee">uvee</string>
    <string name="declaration">Get ready to dive into the greatest \nstories in Tv and Film</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign-Up</string>
    <string name="Terms">By creating an account or signing, you agree to \our Terms and Services</string>
    <string name="sign_in_">Sign In</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="message">Sign in to access your account and continue \nto enjoy the best of movies.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>