<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/first_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

<ImageView
    android:id="@+id/first_pic"
    android:layout_height="300dp"
    android:layout_width="wrap_content"
    android:contentDescription="@string/muvee_poster"
    android:src="@drawable/movie_poster"
    android:background="@color/black"
    android:scaleX="2" />

        <View
            android:id="@+id/transparent1"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:alpha="0.3"
            android:background="@color/black"/>

    </RelativeLayout>
<RelativeLayout
    android:id="@+id/second_lay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m"
        android:textColor="@color/red"
        android:textSize="43sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uvee"
        android:textColor="@color/white"
        android:textSize="43sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="39dp"
        android:textStyle="bold"/>
</RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/declaration"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/subscribe_now"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/subscribe_now"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:textAlignment="center"
        app:backgroundTint="@color/shade_black"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="72dp"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="265dp"
            android:layout_marginTop="7dp" />
            //android:clickable="true"


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terms"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAlignment="center"/>

</LinearLayout>

