<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SignIn">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/m"
                android:textColor="@color/red"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/uvee"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/message"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/edittext_border"
                android:paddingStart="15dp"
                android:hint="@string/email"
                android:inputType="text"
                android:textColorHint="@color/grey"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/edittext_border"
                android:paddingStart="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/grey"
                tools:ignore="RtlSymmetry"/>
        </LinearLayout>

        <Button
            android:id="@+id/signIn_2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="16sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ExtraText">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="72dp"/>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="265dp"
                android:layout_marginTop="7dp" />
            //android:clickable="true"


        </RelativeLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>